# gpt-dtskul-backend

./: GPT Dtskul.postman_collection.json  requirements.txt
app/: utils.py
app/config/: __init__.py  database.py  security.py
app/core/: security.py
app/models/: document.py  user.py
app/repositories/: project.py
app/routers/: document.py  project.py
app/schemas/: chat.py  document.py
app/services/: auth.py  message.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/config/: app.py  gpt.py  log.py  project.py
backend/app/core/: database.py  exceptions.py
backend/app/models/: project.py
backend/app/repositories/: document.py  user.py
backend/app/routers/: chat.py  health.py  home.py  login.py  user.py
backend/app/schemas/: project.py  user.py
